@@ -1,0 +1,8 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+<h1>自動作成のブラックリスト</h1>
+
+自動作成させたくないユーザ名をカンマ区切りで書きます。
