@@ -1,0 +1,11 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+<h1>ネットワークマップ</h1>
+<p>ネットワークマップ画面です。</p>
+
+<p>作成したマップを保存するには、最初に更新を実行してください。</p>
+
+<p>サブマップを作成するには、エッジをクリックします。</p>
